src/test/deca/syntax/invalid/provided/simple_lex.deca
// Description:
//      Programme lexicalement correct
//
// Resultats:
//      Ligne 8 : Erreur de syntaxe.
//      test_lex ne doit pas donner d'erreur.

idf _autre_idf
{
}
(
)
// un commentaire.
